fix spacing in medium screen
apparantly span doesn't have to be  12.

--- a/src/css/ams-overrides.css
+++ b/src/css/ams-overrides.css
@@ -61,6 +61,10 @@
   color: #fff;
 }
 
+[data-theme='dark'] .ams-card__link:hover {
+  color: #fff;
+}
+
 [data-theme='dark'] .ams-page-menu__link:hover {
   color: var(--ifm-link-color);
 }
